--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 
 <head>
     <title>פז - עמוד הבית</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header>
+        <div>
+            <img src="search_button.png" alt="Search Button">
+            <input id="search-text-box" type="text" value="רשום מילת חיפוש" onfocus="this.value = ''">
+            <nav></nav>
+        </div>
+    </header>
 </body>
 
 </html>
