Designing Search Component

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <header>
         <div>
-            <img src="search_button.png" alt="Search Button">
-            <input id="search-text-box" type="text" value="רשום מילת חיפוש" onfocus="this.value = ''">
+            <div id="search-component">
+                <a href="#">English</a>
+                <input id="search-text-box" type="text" value="רשום מילת חיפוש" onfocus="this.value = ''">
+                <a href="#"><img src="search_button.png" alt="Search Button"></a>
+            </div>
             <nav></nav>
         </div>
     </header>
