--- a/index.html
+++ b/index.html
@@ -11,11 +11,91 @@
             <div id="search-component">
                 <a href="#">English</a>
                 <input id="search-text-box" type="text" value="רשום מילת חיפוש" onfocus="this.value = ''">
-                <a href="#"><img src="search_button.png" alt="Search Button"></a>
+                <a href="#"><img src="images\search_button.png" alt="Search Button"></a>
             </div>
-            <nav></nav>
+            <nav>
+                <ul>
+                    <li><a href="#"><img src="images\paz_logo.png" alt="Paz Logo"></a></li>
+                    <li><a href="#"></a><img src="images\menu_home_blue.png" alt="Menu Home Icon"></a></li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">אודות</a>
+                        <div class="dropdown-content">
+                            <a href="#">אודות</a>
+                            <!-- <img src="images\menu_dropdown_sep.png" alt="Dropdown Seperator"> -->
+                            <a href="#">היסטוריה</a>
+                            <a href="#">חזון וערכים</a>
+                            <a href="#">מבנה הקבוצה</a>
+                            <a href="#">חברי דירקטוריון</a>
+                            <a href="#">הנהלת הקבוצה</a>
+                            <a href="#">פרסים והוקרה</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">חטיבות</a>
+                        <div class="dropdown-content">
+                            <a href="#">חטיבות</a>
+                            <a href="#">קמעונאות ומסחר</a>
+                            <a href="#">תעשיות ושירותים</a>
+                            <a href="#">זיקוק</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">אחריות תאגידית</a>
+                        <div class="dropdown-content">
+                            <a href="#">אחריות תאגידית</a>
+                            <a href="#">הקוד האתי</a>
+                            <a href="#">מעורבות חברתית</a>
+                            <a href="#">נגישות</a>
+                            <a href="#">איכות הסביבה ובטיחות</a>
+                            <a href="#">דירוג מעלה</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">קשרי משקיעים</a>
+                        <div class="dropdown-content">
+                            <a href="#">פרופיל חברה</a>
+                            <a href="#">דו"חות כספיים</a>
+                            <a href="#">כלים למשקיע</a>
+                            <a href="#">נתוני מניה</a>
+                            <a href="#">אסיפות כלליות</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="mailto:info@site.com">התחנות שלנו</a>
+                        <div class="dropdown-content">
+                            <a href="#">התחנות שלנו</a>
+                            <a href="#">נגישות מתחמי פז</a>
+                            <a href="#">רשימת תחנות</a>
+                            <a href="#">מועדונים</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">קריירה</a>
+                        <div class="dropdown-content">
+                            <a href="#">לעבוד בפז</a>
+                            <a href="#">ניהול תחנת פז</a>
+                            <a href="#">קריירה</a>
+                        </div>
+                    </li>
+                    <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
+                    <li class="dropdown">
+                        <a href="#">חדשות ומדיה</a>
+                        <div class="dropdown-content">
+                            <a href="#">פרסומות</a>
+                            <a href="#">הודעות לעיתונות</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
+    <div id="fading-background"></div>
 </body>
 
 </html>
