Designing First Row

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#"><img src="images\paz_logo.png" alt="Paz Logo"></a></li>
-                    <li><a href="#"></a><img src="images\menu_home_blue.png" alt="Menu Home Icon"></a></li>
+                    <li><a href="#"><img src="images\menu_home_blue.png" alt="Menu Home Icon"></a></li>
                     <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
                     <li class="dropdown">
                         <a href="#">אודות</a>
@@ -96,6 +96,24 @@
         </div>
     </header>
     <div id="fading-background"></div>
+    <main>
+        <div class="flex-container">
+            <div class="flex-item">
+                <img src="images\Pic1.jpg" alt="קמעונאות ומסחר">
+            </div>
+            <div class="flex-item">
+                <img src="images\Pic2.jpg" alt="זיקוק">
+            </div>
+            <div class="flex-item">
+                <img src="images\Pic3.jpg" alt="תעשיות ושירותים">
+            </div>
+        </div>
+    </main>
+    <div class="flex-container">
+        <!-- <div class="flex-item"><img src="images\Pic4.jpg" alt="קמעונאות ומסחר"></div> -->
+        <!-- <div class="flex-item"><img src="images\Pic5.jpg" alt="זיקוק"></div> -->
+        <!-- <div class="flex-item"><img src="images\Pic6.jpg" alt="תעשיות ושירותים"></div> -->
+    </div>
 </body>
 
 </html>
