Finalizing First Row

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>פז - עמוד הבית</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -100,20 +101,50 @@
         <div class="flex-container">
             <div class="flex-item">
                 <img src="images\Pic1.jpg" alt="קמעונאות ומסחר">
+                <div class="text-over-image">
+                    <h1>קמעונאות ומסחר</h1>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
+                    <div class="read-more">
+                        <a href="#" onmouseover="hoverOnReadMore(this)" onmouseout="outOfReadMore(this)">
+                            <span>קרא עוד</span><img src="images\read_more_white.png" alt="Read More">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="flex-item">
                 <img src="images\Pic2.jpg" alt="זיקוק">
+                <div class="text-over-image">
+                    <h1>זיקוק</h1>
+                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
+                        הכוללת ייצור תזקיקי נפט...</p>
+                    <div class="read-more">
+                        <a href="#" onmouseover="hoverOnReadMore(this)" onmouseout="outOfReadMore(this)">
+                            <span>קרא עוד</span><img src="images\read_more_white.png" alt="Read More">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="flex-item">
                 <img src="images\Pic3.jpg" alt="תעשיות ושירותים">
+                <div class="text-over-image">
+                    <h1>תעשיות ושירותים</h1>
+                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ומובילות את השוק...</p>
+                    <div class="read-more">
+                        <a href="#" onmouseover="hoverOnReadMore(this)" onmouseout="outOfReadMore(this)">
+                            <span>קרא עוד</span><img src="images\read_more_white.png" alt="Read More">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="flex-container">
+            <!-- <div class="flex-item"><img src="images\Pic4.jpg" alt="קמעונאות ומסחר"></div> -->
+            <!-- <div class="flex-item"><img src="images\Pic5.jpg" alt="זיקוק"></div> -->
+            <!-- <div class="flex-item"><img src="images\Pic6.jpg" alt="תעשיות ושירותים"></div> -->
+        </div>
     </main>
-    <div class="flex-container">
-        <!-- <div class="flex-item"><img src="images\Pic4.jpg" alt="קמעונאות ומסחר"></div> -->
-        <!-- <div class="flex-item"><img src="images\Pic5.jpg" alt="זיקוק"></div> -->
-        <!-- <div class="flex-item"><img src="images\Pic6.jpg" alt="תעשיות ושירותים"></div> -->
-    </div>
 </body>
 
 </html>
