--- a/index.html
+++ b/index.html
@@ -140,9 +140,56 @@
             </div>
         </div>
         <div class="flex-container">
-            <!-- <div class="flex-item"><img src="images\Pic4.jpg" alt="קמעונאות ומסחר"></div> -->
-            <!-- <div class="flex-item"><img src="images\Pic5.jpg" alt="זיקוק"></div> -->
-            <!-- <div class="flex-item"><img src="images\Pic6.jpg" alt="תעשיות ושירותים"></div> -->
+            <div class="flex-item">
+                <div>
+                    <h3>כרטיס אשראי שופרסל וכרטיס אשראי יש</h3>
+                    <h3>_______________________________</h3>
+                    <img src="images\Pic4.jpg" alt="כרטיס אשראי שופרסל וכרטיס אשראי יש">
+                    <div class="more-details">
+                        <a href="#" onmouseover="hoverOnMoreDetails(this)" onmouseout="outOfMoreDetails(this)">
+                            <span>לפרטים נוספים</span><img src="images\read_more_yellow.png" alt="Read More">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div>
+                    <h3>yellow click&pick;</h3>
+                    <h3>_______________________________</h3>
+                    <img id="temp-image" src="images\Pic5a.jpg" alt="כרטיס אשראי שופרסל וכרטיס אשראי יש">
+                    <div class="more-details">
+                        <a href="#" onmouseover="hoverOnMoreDetails(this)" onmouseout="outOfMoreDetails(this)">
+                            <span>לפרטים נוספים</span><img src="images\read_more_yellow.png" alt="Read More">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div>
+                    <h3>התחנות שלנו בדרך שלך</h3>
+                    <h3>_______________________________</h3>
+                    <img id="temp-image" src="images\Pic6.png" alt="כרטיס אשראי שופרסל וכרטיס אשראי יש">
+                    <div id="branches">
+                        <ul>
+                            <li>
+                                <a href="#" onmouseover="hoverOnNorth(this)" onmouseout="outOfNorth(this)">
+                                    <span>צפון</span><img src="images\read_more_yellow.png" alt="צפון">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" onmouseover="hoverOnCenter(this)" onmouseout="outOfCenter(this)">
+                                    <span>מרכז</span><img src="images\read_more_yellow.png" alt="מרכז">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" onmouseover="hoverOnSouth(this)" onmouseout="outOfSouth(this)">
+                                    <span>דרום</span><img src="images\read_more_yellow.png" alt="דרום">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
