--- a/index.html
+++ b/index.html
@@ -192,6 +192,32 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div id="fading-background2"></div>
+        <div class="flex-container">
+            <ul>
+                <li><a href="#"><img src="images\fb_icon.png" alt="Facebook Icon"></a></li>
+                <li>|</li>
+                <li><a href="#">עמוד הבית</a></li>
+                <li>|</li>
+                <li><a href="#">מחירונים</a></li>
+                <li>|</li>
+                <li><a href="#">קריירה</a></li>
+                <li>|</li>
+                <li><a href="#">תנאי שימוש</a></li>
+                <li>|</li>
+                <li><a href="#">נגישות</a></li>
+                <li>|</li>
+                <li><a href="#">מפת אתר</a></li>
+                <li>|</li>
+                <li><a href="#">צור קשר</a></li>
+                <li>|</li>
+                <li><a href="#">שטחי מסחר</a></li>
+                <li>|</li>
+                <li><a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
