--- a/index.html
+++ b/index.html
@@ -198,21 +198,21 @@
             <ul>
                 <li><a href="#"><img src="images\fb_icon.png" alt="Facebook Icon"></a></li>
                 <li>|</li>
-                <li><a href="#">עמוד הבית</a></li>
+                <li><a title="קישור לעמוד הבית" href="#">עמוד הבית</a></li>
                 <li>|</li>
-                <li><a href="#">מחירונים</a></li>
+                <li><a title="קישור למחירונים" href="#">מחירונים</a></li>
                 <li>|</li>
-                <li><a href="#">קריירה</a></li>
+                <li><a title="קישור לקריירה" href="#">קריירה</a></li>
                 <li>|</li>
-                <li><a href="#">תנאי שימוש</a></li>
+                <li><a title="קישור לתנאי שימוש" href="#">תנאי שימוש</a></li>
                 <li>|</li>
-                <li><a href="#">נגישות</a></li>
+                <li><a title="קישור לנגישות" href="#">נגישות</a></li>
                 <li>|</li>
-                <li><a href="#">מפת אתר</a></li>
+                <li><a title="קישור למפת אתר" href="#">מפת אתר</a></li>
                 <li>|</li>
-                <li><a href="#">צור קשר</a></li>
+                <li><a title="קישור לצור קשר" href="#">צור קשר</a></li>
                 <li>|</li>
-                <li><a href="#">שטחי מסחר</a></li>
+                <li><a title="קישור לשטחי מסחר" href="#">שטחי מסחר</a></li>
                 <li>|</li>
                 <li><a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
             </ul>
