Finalizing Contact Page

--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,25 @@
                         </div>
                     </div>
                     <div>
-
+                        <div>
+                            <h2>פרטי יצירת קשר</h2>
+                            <p>
+                                <strong>פז חברת נפט בע"מ</strong><br>
+                                יורו פארק, בניין הולנד<br>
+                                קיבוץ יקום 60972<br>
+                                טל. שירות לקוחות 1-800-774-774<br>
+                                פקס.09-8641714<br>
+                            </p>
+                        </div>
+                        <div>
+                            <h2>עוד בפז</h2>
+                            <p>
+                                <strong>ליצירת קשר עם דוברות פז</strong><br>
+                                <a href="#">לחצו כאן>></a><br>
+                                <strong>רוצים לעבוד בפז?</strong><br>
+                                <a href="#">לחצו כאן>></a><br>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
