--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <li>|</li>
                 <li><a title="קישור למפת אתר" href="#">מפת אתר</a></li>
                 <li>|</li>
-                <li><a title="קישור לצור קשר" href="#">צור קשר</a></li>
+                <li><a title="קישור לצור קשר" href="contact.html">צור קשר</a></li>
                 <li>|</li>
                 <li><a title="קישור לשטחי מסחר" href="#">שטחי מסחר</a></li>
                 <li>|</li>
