Adding Send Button

--- a/contact.html
+++ b/contact.html
@@ -141,6 +141,9 @@
                                     <input type="email" id="email" required>
                                 </div>
                                 <textarea rows="3" cols="20" onfocus="this.value = ''">תוכן הפנייה</textarea>
+                                <a href="#" onmouseover="hoverOnSend(this)" onmouseout="outOfSend(this)">
+                                    <img src="images\send.png" alt="שלח">
+                                </a>
                             </form>
                         </div>
                     </div>
