--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#"><img src="images\paz_logo.png" alt="Paz Logo"></a></li>
-                    <li><a href="#"><img src="images\menu_home_blue.png" alt="Menu Home Icon"></a></li>
+                    <li><a href="index.html"><img src="images\paz_logo.png" alt="Paz Logo"></a></li>
+                    <li><a href="index.html"><img src="images\menu_home_blue.png" alt="Menu Home Icon"></a></li>
                     <li><img src="images\menu_sep.png" alt="Menu Seperator"></li>
                     <li class="dropdown">
                         <a href="#">אודות</a>
@@ -178,7 +178,7 @@
             <ul>
                 <li><a href="#"><img src="images\fb_icon.png" alt="Facebook Icon"></a></li>
                 <li>|</li>
-                <li><a title="קישור לעמוד הבית" href="#">עמוד הבית</a></li>
+                <li><a title="קישור לעמוד הבית" href="index.html">עמוד הבית</a></li>
                 <li>|</li>
                 <li><a title="קישור למחירונים" href="#">מחירונים</a></li>
                 <li>|</li>
