--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
             </ul>
         </div>
     </footer>
+    <script>
+        setInterval(changeImage, 5000);
+    </script>
 </body>
 
 </html>
